--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ bevy = { version = "0.17", default-features = false, features = [
 ] }
 fontmesh = { path = "../fontmesh", version = "0.3" }
 thiserror = "1.0"
+tracing = "0.1.43"
 
 [dev-dependencies]
 bevy = { version = "0.17", default-features = false, features = [
@@ -46,3 +47,4 @@ bevy = { version = "0.17", default-features = false, features = [
     "tonemapping_luts",
     "zstd_rust", # Added zstd backend
 ] }
+rand = "0.9.2"
