--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_fontmesh"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["Po Hsuan Lai"]
 description = "Simple and focused Bevy plugin for generating 3D text meshes from fonts"
@@ -16,44 +16,22 @@ exclude = ["assets/", "images/"]
 [dependencies]
 bevy = { version = "0.17", default-features = false, features = [
     "bevy_asset",
-    "bevy_log",
-    "bevy_scene",
-    "bevy_winit",
-    "bevy_core_pipeline",
     "bevy_pbr",
-    "bevy_gltf",
     "bevy_render",
-    "bevy_sprite",
-    "bevy_text",
-    "bevy_ui",
-    "multi_threaded",
-    "png",
-    "hdr",
-    "x11",
-    "tonemapping_luts",
-    "zstd_rust", # Added zstd backend
 ] }
 fontmesh = "0.3"
-thiserror = "1.0"
+thiserror = "2.0"
 
 [dev-dependencies]
 bevy = { version = "0.17", default-features = false, features = [
     "bevy_asset",
-    "bevy_log",
-    "bevy_scene",
+    "bevy_pbr",
+    "bevy_render",
     "bevy_winit",
     "bevy_core_pipeline",
-    "bevy_pbr",
-    "bevy_gltf",
-    "bevy_render",
-    "bevy_sprite",
-    "bevy_text",
-    "bevy_ui",
     "multi_threaded",
-    "png",
-    "hdr",
-    "x11",
     "tonemapping_luts",
-    "zstd_rust", # Added zstd backend
+    "zstd_rust",
+    "x11",  # or "wayland" depending on your platform
 ] }
 rand = "0.9.2"
